[metadata]
name = prettypy 
description = "Sets of functions for drawing pretty plots"
license = Apache License 2.0
version = 1.1.3
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3

[options]
packages = 
    prettypy
    prettypy.donut
    prettypy.heatmap
    prettypy.upset
install_requires = 
    numpy >= 1.19.1
    matplotlib >= 3.3.3
    pandas >= 1.2.1
    openpyxl >= 3.0.6
    seaborn >= 0.11.1
    statsmodels >= 0.12.1
    tqdm >= 4.56.0
